2015-03-14  Daniel Colascione  <dancol@dancol.org>

	* emacs.c (standard_args): Add --no-x-resources.
	(usage_message): Document that -Q implies --no-x-resources.

2015-03-13  Paul Eggert  <eggert@cs.ucla.edu>

	* frame.c (x_get_resource_string) [!USE_GTK]: Don't define.

	* editfns.c, systime.h (mktime_z) [!HAVE_TZALLOC]: Now static.

2015-03-12  Eli Zaretskii  <eliz@gnu.org>

	* w32font.c (font_supported_scripts): Add subranges for Latin
	Supplement, Latin Extended-A/B, Vai, Supplemental Punctuation, Tai
	Le, Buginese, Yijing Hexagrams, Ancient Greek Numbers, Tai Xuan
	Jing, Counting Rods, Sundanese, Lepcha, Ol Chiki, Saurashtra,
	Kayah Li, Rejang, Ancient Symbols, Phistos Disc, Carian, Lycian,
	Lydian, Dominoe Tiles, and Mahjong Tiles.  Break the Mathematical
	Alphanumeric Symbols into several "scripts" like fontset.el does.
	(Bug#19993)
	(syms_of_w32font): DEFSYM all the new script symbols.

2015-03-07  Eli Zaretskii  <eliz@gnu.org>

	* w32fns.c <ImmReleaseContext_Proc, ImmSetCompositionWindow_Proc>:
	Fix typedefs to be consistent with the corresponding w32 API
	signatures.
	(w32_wnd_proc) <WM_IME_STARTCOMPOSITION>: Don't invoke
	DefWindowProc if we successfully handled the message, as doing so
	causes problems in displaying selection dialogs.  (Bug#11732)

2015-03-05  Paul Eggert  <eggert@cs.ucla.edu>

	Work around x86 glibc backtrace bug
	* sysdep.c (emacs_backtrace): Don't dump core on x86.
	Fixes: bug#19959

2015-03-05  Eli Zaretskii  <eliz@gnu.org>

	* keyboard.c (make_lispy_position): When the click is on the
	right-side vertical scroll bar, pass the rightmost X coordinate to
	buffer_posn_from_coords, so that the returned text position
	reflects the closest point to the click.  Fixes region extension
	when mouse moves outside the Emacs frame that has scroll bars on
	the right.

2015-03-04  Martin Rudalics  <rudalics@gmx.at>

	* frame.c (x_set_font): Try to keep frame height and width
	unchanged if tool bar size changes with new font.
